--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ button{
     outline: none;
     border: 0;
     cursor: pointer;
-    background:#639aff;
+    background:#2459a9;
     color: #ffffff;
     width: 12rem;
     height: 2.1rem;
@@ -108,12 +108,12 @@ header{
     margin-right: .5rem;
     color: hsl(243, 87%, 12%);
     border: 0;
-    background: #4b8afea0;
+    background: #a2a2a2a0;
     border-radius: .2rem .5rem;
 }
 
 header ::placeholder{
-    color: #ffffff;
+    color: #040048;
     opacity: 1;
 }
 
@@ -238,7 +238,7 @@ footer{
 }
 
 footer ::placeholder{
-    color: #639aff;
+    color: #000968;
 }
 
 .footer1-input form button{
@@ -296,4 +296,21 @@ body{
 
 }
 
-
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
