--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,14 +106,14 @@ header{
 .header-content-text form input{
     height: 2rem;
     margin-right: .5rem;
-    color: hsl(243, 87%, 12%);
+    color: hsl(0, 0%, 100%);
     border: 0;
-    background: #a2a2a2a0;
+    background: #769ce2;
     border-radius: .2rem .5rem;
 }
 
 header ::placeholder{
-    color: #040048;
+    color: #ffffff;
     opacity: 1;
 }
 
@@ -298,19 +298,19 @@ body{
 
 ::-webkit-scrollbar {
     width: 10px;
-  }
+}
   
-  /* Track */
-  ::-webkit-scrollbar-track {
+/* Track */
+::-webkit-scrollbar-track {
     background: #f1f1f1; 
-  }
+}
    
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
+/* Handle */
+::-webkit-scrollbar-thumb {
     background: #888; 
-  }
+}
   
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
     background: #555; 
-  }
+}
